 - Implemented OBJECT as link (similar to FRAME).
 - Enabled the file dpi to look inside gzipped files.
 - Allowed form inputs outside the FORM element (it's in the standard).
 - Fixed a segfault bug in VERBATIM mode.
 - Made image inputs less of a special case by using x,y in ComplexButton.
 - Made forms show their action URL upon enter/leave mouse events (safety).
   Patches: place (AKA corvid)
+- Fixed a problem with locally-installed dpis.
 - Added code for optional image loading (nice interface) very advanced!
 - Added an experimental gzip decoder! 
 - Implemented "Load Images" in the page menu and cleaned up html.hh.
 - Added shortcuts: PgDn=Spc, PgUp=b, Back=BackSpace, Forw=Shift+Backspace.
 - Made a cleanup in cache's parse header code.
 - Added support for "charset" in the META element.
 - Added a_Capi_get_flags(). It requests a cache entry's status as flags.
 - Switched URL_DATA type from char* to a dStr.
 - Implemented the file input control for forms.
 - Fixed data guesser to detect ASCII, LATIN1, UTF8, KOI8-R, CP-1251 as text.
   Patch: place, Jorge Arellano Cid
+- Fixed a cookies-related dillo freeze bug happening at:
     http://www.fltk.org/newsgroups.php?gfltk.general+v:24912
   Patch: Andreas Kemnade, Jorge Arellano Cid
+- Fixed a va_list-related SEGFAULT on 64bit-arch in dStr_vsprintfa().
   Added const declarations in html parser.
   Patch: Vincent Thomasset
+- Fixed void to int conversions for 64bit-arch.
   Patch: Jorge Arellano Cid, higuita
+- Set the url resolver to escape illegal chars instead of stripping.
   Patch: Jorge Arellano Cid, Jeremy Henty
+- Added suport for old iconv() (const char** as 2nd arg).
   Patch: Jorge Arellano Cid, Christian Kellermann
+- Added a strndup() replacement in dw2
   Patch: Alexander Becher, Johannes Hofmann, Jorge Arellano Cid
+- Fixed calcHashValue() to only return non-negative numbers (was SEGFAULT).
 - Improved scrolling performance on large pages by copying screen data
    instead of rendering.